--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h5 {
 .main-background {
   background-position: left top;
   background-repeat: no-repeat;
-  background-image: url(images/flower.jpg);
+  background-image: url(images/welcome.jpg);
   background-size: cover;
   max-height: 100vh;
 }
