--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ hr {
 .contact-background {
   background-repeat: no-repeat;
   background-image: url(images/contact-background.jpg);
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   height: 100vh;
   text-align: center;
