--- a/style.css
+++ b/style.css
@@ -31,17 +31,17 @@ h5 {
 .gradient {
   background: linear-gradient(
     30deg,
-    rgba(0, 0, 0, 0.5),
-    rgba(255, 255, 255, 0.5)
+    rgba(0, 0, 0, 0.6),
+    rgba(255, 255, 255, 0.6)
   );
   background-size: 400% 400%;
   height: 100vh;
 
-  -webkit-animation: gradation 6s ease infinite;
-  -moz-animation: gradation 6s ease infinite;
-  animation: gradation 6s ease infinite;
+  /*-webkit-animation: gradation 5s ease infinite;*/
+  /*-moz-animation: gradation 5s ease infinite;*/
+  animation: gradation 5s ease infinite;
 }
-@-webkit-keyframes gradation {
+/*@-webkit-keyframes gradation {
   0% {
     background-position: 0% 50%;
   }
@@ -51,8 +51,8 @@ h5 {
   100% {
     background-position: 0% 50%;
   }
-}
-@-moz-keyframes gradation {
+}*/
+/*@-moz-keyframes gradation {
   0% {
     background-position: 0% 50%;
   }
@@ -62,7 +62,7 @@ h5 {
   100% {
     background-position: 0% 50%;
   }
-}
+}*/
 @keyframes gradation {
   0% {
     background-position: 0% 50%;
@@ -75,18 +75,20 @@ h5 {
   }
 }
 
-header .inner {
+/*header*/
+
+/*header .inner {
   display: flex;
   width: 100%;
   height: 60px;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: center;
-}
+}*/
 
 header nav {
   height: 50px;
   width: 100%;
-  background-color: rgba(45, 128, 96, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0px;
   z-index: 10;
@@ -113,8 +115,7 @@ header nav a {
   font-weight: bold;
 }
 
-
-.svg-wrapper {
+/*.svg-wrapper {
   position: relative;
   width: 80%;
   padding-top: 40%; 
@@ -149,16 +150,14 @@ header nav a {
     stroke-dashoffset: 0;
     fill: #fff;
   }
-}
-
-
+}*/
 
 .content-title {
-  padding: 40px 0 30px 0;
+  padding: 30px 0;
   font-family: "Caveat", cursive;
 }
 .content {
-  padding: 30px 0 30px 0;
+  padding-top: 30px;
   line-height: 250%;
   margin-bottom: 30px;
 }
@@ -175,7 +174,7 @@ header nav a {
 .linkbtn:hover {
   color: #333;
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 15px;
 }
 a {
   text-decoration: none;
@@ -189,21 +188,23 @@ a:hover {
   right: 20px;
 }
 #page_top i {
-  padding-top: 12px;
+  padding-top: 30px;
+  padding-right: 30px;
 }
-#page_top a {
+/*#page_top a {
+  size: 200%;
   display: block;
-  border-radius: 30px;
+  background-color: #000000;
+  color: #fff;
+  border-radius: 20px;
   width: 40px;
   height: 40px;
-  background-color: #c993ff;
-  color: #fff;
+  margin-right: 10px;
   text-align: center;
-}
+}*/
 #page_top a:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
-
 
 .effect p,
 .effect div {
@@ -214,7 +215,7 @@ a:hover {
   padding-bottom: 30px;
 }
 
-/*about*/
+/*About*/
 .about-background {
   background-image: url(images/wood.jpg);
   position: relative;
@@ -245,12 +246,12 @@ a:hover {
   padding-bottom: 30px;
 }
 
-.works-contents {
+/*.works-contents {
   text-align: center;
   color: #333;
-}
+}*/
 
-.occupations {
+/*.occupations {
   text-align: left;
   font-family: "Caveat", cursive;
   margin: 50px 0 20px 50px;
@@ -269,8 +270,8 @@ a:hover {
   );
   background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-.works-content-title {
+}*/
+/*.works-content-title {
   font-weight: bold;
   margin: 0 20px 20px 20px;
   padding: 0;
@@ -328,7 +329,7 @@ hr {
 }
 .works-img {
   margin-top: 30px;
-}
+}*/
 
 /*Contact*/
 .contact-background {
@@ -347,11 +348,12 @@ hr {
   bottom: 0;
 }
 
+/*スマホ対応*/
 @media screen and (max-width: 670px) {
   
-  header nav {
+  /*header nav {
     display: none;
-  }
+  }*/
 
   header.opened {
     background: linear-gradient(
@@ -381,11 +383,11 @@ hr {
     padding: 30px;
   }
   
-  .svg-wrapper {
+  /*.svg-wrapper {
     position: relative;
     width: 80%;
     padding-top: 80%;
     margin: auto;
-  }
+  }*/
 
 }
