--- a/style.css
+++ b/style.css
@@ -77,14 +77,6 @@ h5 {
 
 /*header*/
 
-/*header .inner {
-  display: flex;
-  width: 100%;
-  height: 60px;
-  flex-flow: row nowrap;
-  justify-content: center;
-}*/
-
 header nav {
   height: 50px;
   width: 100%;
@@ -246,91 +238,6 @@ a:hover {
   padding-bottom: 30px;
 }
 
-/*.works-contents {
-  text-align: center;
-  color: #333;
-}*/
-
-/*.occupations {
-  text-align: left;
-  font-family: "Caveat", cursive;
-  margin: 50px 0 20px 50px;
-  padding-top: 50px;
-}
-.sub-content {
-  font-family: "Kalam", cursive;
-  font-size: 20px;
-  margin-bottom: 0;
-  margin-top: 130px;
-  color: #333;
-  background: -webkit-linear-gradient(
-    -45deg,
-    rgba(252, 70, 107, 0.8),
-    rgba(63, 94, 251, 0.8)
-  );
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-}*/
-/*.works-content-title {
-  font-weight: bold;
-  margin: 0 20px 20px 20px;
-  padding: 0;
-  color: #333;
-  background: -webkit-linear-gradient(
-    -45deg,
-    rgba(252, 70, 107, 0.8),
-    rgba(63, 94, 251, 0.8)
-  );
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.workslink {
-  padding: 15px 25px;
-  color: #fff;
-  background: -webkit-linear-gradient(
-    -45deg,
-    rgba(252, 70, 107, 0.8),
-    rgba(63, 94, 251, 0.8)
-  );
-  margin-bottom: 0;
-  border-radius: 10%;
-  transition: 1s;
-}
-.workslink:hover {
-  border-radius: 0;
-  opacity: 0.7;
-}
-hr {
-  margin: auto;
-  border: none;
-  width: 0%;
-  height: 3px;
-  background-image: -webkit-linear-gradient(
-    -45deg,
-    rgba(252, 70, 107, 0.8),
-    rgba(63, 94, 251, 0.8)
-  );
-  background-image: -moz-linear-gradient(
-    -45deg,
-    rgba(252, 70, 107, 0.8),
-    rgba(63, 94, 251, 0.8)
-  );
-  background-image: -ms-linear-gradient(
-    -45deg,
-    rgba(252, 70, 107, 0.8),
-    rgba(63, 94, 251, 0.8)
-  );
-  background-image: -o-linear-gradient(
-    -45deg,
-    rgba(252, 70, 107, 0.8),
-    rgba(63, 94, 251, 0.8)
-  );
-  transition: 2s;
-}
-.works-img {
-  margin-top: 30px;
-}*/
-
 /*Contact*/
 .contact-background {
   background-repeat: no-repeat;
@@ -351,6 +258,14 @@ hr {
 /*スマホ対応*/
 @media screen and (max-width: 670px) {
   
+  .main-background {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(images/welcome-sign.jpg);
+    background-size: cover;
+    max-height: 50vh;
+  }
+
   #page_top i {
     padding-top: 10px;
     padding-right: 10px;
