--- a/style.css
+++ b/style.css
@@ -286,6 +286,13 @@ a:hover {
     font-weight: bold;
   }
 
+  .content {
+    padding-top: 30px;
+    line-height: 250%;
+    margin-bottom: 30px;
+    line-height: 50%;
+  }
+
   #page_top i {
     padding-top: 20px;
     padding-right: 10px;
