--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ a:hover {
     padding-top: 30px;
     line-height: 250%;
     margin-bottom: 30px;
-    line-height: 50%;
+    line-height: 2px;
   }
 
   #page_top i {
