--- a/works/style.css
+++ b/works/style.css
@@ -58,8 +58,8 @@ h5 {
 .header-background {
   background-image: url(../images/wood.jpg);
   position: relative;
-  /*height: 100vh;*/
-  /*background-position: center;*/
+  height: 100vh;
+  background-position: center;
   background-size: cover;
   text-align: center;
 }
@@ -279,9 +279,18 @@ a:hover {
     padding: 30px;
   }
 
+  .header-background {
+    background-image: url(../images/wood.jpg);
+    position: relative;
+    height: 50vh;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+  }
+
   #works {
     color: black;
-    padding: 50px 10px;
+    padding: 50px 20px;
   }
 
   header nav {
