--- a/works/style.css
+++ b/works/style.css
@@ -22,14 +22,6 @@ h5 {
   display: inline-block;
 }
 
-.main-background {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(images/welcome-sign.jpg);
-  background-size: cover;
-  max-height: 100vh;
-}
-
 .gradient {
   background: linear-gradient(
     45deg,
@@ -133,7 +125,17 @@ a:hover {
   padding-top: 30px;
   padding-right: 30px;
 }
-
+/*#page_top a {
+  size: 200%;
+  display: block;
+  background-color: #000000;
+  color: #fff;
+  border-radius: 20px;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  text-align: center;
+}*/
 #page_top a:hover {
   opacity: 0.6;
 }
@@ -148,12 +150,34 @@ a:hover {
 }
 
 /*Works*/
-#works {
-  color: black;
-  padding: 50px 100px;
+
+.main {
+  display: flex;
+  /*float: left;*/
 }
 
-.works-content-title {
+#works {
+  color: black;
+  width: 80%;
+  padding: 50px 100px;
+  /*float: left;*/
+}
+
+#tables {
+  color: black;
+  width: 20%;
+  padding: 50px 40px;
+  /*float: left;*/
+  background-color: rgb(200, 200, 200);
+}
+
+.tables-navigation {
+  position: -webkit-sticky; /* safari対応 */
+  position: sticky;
+  top: 50px;
+}
+
+.main h2 {
   border-bottom: solid;
   padding-top: 30px;
   font-family: "Caveat", cursive;
@@ -185,6 +209,12 @@ a:hover {
   text-align: center;
   position: absolute;
   bottom: 0;
+}
+
+.image {
+  display: block;
+  width: 90%;
+  height: auto;
 }
 
 /*タブレットサイズ以下にした場合*/
@@ -279,6 +309,17 @@ a:hover {
     padding: 30px;
   }
 
+  .gradient {
+    background: linear-gradient(
+      45deg,
+      rgba(0, 0, 0, 0.4),
+      rgba(255, 255, 255, 0.4)
+    );
+    background-size: 500% 500%;
+    height: 50vh;
+    animation: gradation 5s ease infinite;
+  }
+
   .header-background {
     background-image: url(../images/wood.jpg);
     position: relative;
@@ -286,11 +327,6 @@ a:hover {
     background-position: center;
     background-size: cover;
     text-align: center;
-  }
-
-  #works {
-    color: black;
-    padding: 50px 20px;
   }
 
   header nav {
