--- a/works/style.css
+++ b/works/style.css
@@ -219,94 +219,9 @@ a:hover {
 
 /*タブレットサイズ以下にした場合*/
 @media screen and (max-width: 901px) {
-  /*3本線の表示*/
-  header .humberger-wrap {
-    display: block;
-  }
-
-  /*3本線の位置*/
-  header .humberger-wrap {
-    position: absolute;
-    top: 0;
-    right: 20px;
-    width: 40px;
-    height: 100%;
-    cursor: pointer;
-  }
-
-  /*humberger-border1,2,3の線*/
-  header .humberger-wrap [class*="humberger-border"] {
-    position: absolute;
-    width: 40px;
-    height: 2px;
-    transition: 0.4s all ease;
-    transform-origin: center center;
-    background: #333;
-  }
-  /*1本目の線*/
-  header .humberger-wrap .humberger-border-1 {
-    top: 20px;
-    right: 0;
-  }
-  /*2本目の線*/
-  header .humberger-wrap .humberger-border-2 {
-    top: 30px;
-    right: 0;
-  }
-  /*3本目の線*/
-  header .humberger-wrap .humberger-border-3 {
-    top: 40px;
-    right: 0;
-  }
-
-  /*開閉ボタンopen時の横線1本目*/
-  header .humberger-wrap.opened .humberger-border-1 {
-    top: 30px;
-    transform: rotate(45deg);
-  }
-  /*開閉ボタンopen時の横線2本目*/
-  header .humberger-wrap.opened .humberger-border-2 {
-    top: 30px;
-    transform: rotate(-45deg);
-  }
-  /*開閉ボタンopen時の横線3本目*/
-  header .humberger-wrap.opened .humberger-border-3 {
-    top: 30px;
-    transform: rotate(-45deg);
-    opacity: 0;
-  }
   /*メニューを非表示*/
   header nav {
     display: none;
-  }
-
-  /*open時に一番上のヘッダーの背景色を変化*/
-  header.opened {
-    background: linear-gradient(
-      44deg,
-      rgb(252, 70, 107, 0.6),
-      rgb(63, 94, 251, 0.6)
-    );
-    background-size: cover;
-    height: 100vh;
-  }
-
-  header.opened nav {
-    display: block;
-    min-height: 100vh;
-    opacity: 1;
-    top: 60px;
-  }
-
-  header nav ul.header-navigation {
-    flex-flow: column nowrap;
-  }
-
-  header nav ul.header-navigation li a {
-    display: block;
-    height: auto;
-    margin: 0;
-    padding: 30px;
   }
 
   .gradient {
@@ -316,7 +231,7 @@ a:hover {
       rgba(255, 255, 255, 0.4)
     );
     background-size: 500% 500%;
-    height: 50vh;
+    height: auto;
     animation: gradation 5s ease infinite;
   }
 
@@ -358,4 +273,12 @@ a:hover {
     padding-top: 18%;
     font-family: "Caveat", cursive;
   }
+
+  #works {
+    color: black;
+    width: 80%;
+    padding: 50px 5px;
+    /*float: left;*/
+  }
+
 }
