--- a/works/style.css
+++ b/works/style.css
@@ -33,6 +33,17 @@ h5 {
   animation: gradation 5s ease infinite;
 }
 
+.header-gradient {
+  background: linear-gradient(
+    45deg,
+    rgba(0, 0, 0, 0.4),
+    rgba(255, 255, 255, 0.4)
+  );
+  background-size: 500% 500%;
+  height: 100vh;
+  animation: gradation 5s ease infinite;
+}
+
 @keyframes gradation {
   0% {
     background-position: 0% 50%;
@@ -224,14 +235,14 @@ a:hover {
     display: none;
   }
 
-  .gradient {
+  .header-gradient {
     background: linear-gradient(
       45deg,
       rgba(0, 0, 0, 0.4),
       rgba(255, 255, 255, 0.4)
     );
     background-size: 500% 500%;
-    height: auto;
+    height: 50vh;
     animation: gradation 5s ease infinite;
   }
 
