--- a/works/style.css
+++ b/works/style.css
@@ -230,10 +230,6 @@ a:hover {
 
 /*タブレットサイズ以下にした場合*/
 @media screen and (max-width: 901px) {
-  /*メニューを非表示*/
-  header nav {
-    display: none;
-  }
 
   .header-gradient {
     background: linear-gradient(
@@ -288,8 +284,16 @@ a:hover {
   #works {
     color: black;
     width: 80%;
+    padding: 50px 10px;
+    /*float: left;*/
+  }
+
+  #tables {
+    color: black;
+    width: 20%;
     padding: 50px 5px;
     /*float: left;*/
+    background-color: rgb(200, 200, 200);
   }
 
 }
