--- a/style.css
+++ b/style.css
@@ -184,11 +184,11 @@ a:hover {
   text-align: center;
   padding-top: 100px;
 }
-.works-main-content-title {
+/*.works-main-content-title {
   margin: auto;
   font-family: "Caveat", cursive;
   padding-bottom: 30px;
-}
+}*/
 
 /*Contact*/
 .contact-background {
