--- a/contact.css
+++ b/contact.css
@@ -31,23 +31,26 @@ th span {
 }
 
 .button {
-  display       : inline-block;
-  border-radius : 5%;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius : 5px;
   font-size     : 18pt;
   text-align    : center;
   cursor        : pointer;
   padding       : 12px 12px;
-  background    : #000066;
+  background    : linear-gradient(0deg, #68d3db, #e5f4fc);
   color         : #ffffff;
   line-height   : 1em;
   transition    : .3s;
   box-shadow    : 6px 6px 3px #666666;
-  border        : 2px solid #000066;
+  /*background-image: linear-gradient(0deg, #68d3db, #e5f4fc);*/
+  border: 1px solid #2c628b;
 }
-.buton:hover {
-  box-shadow    : none;        /* カーソル時の影消去 */
+.button:hover {
   color         : #000066;     /* 背景色     */
-  background    : #ffffff;     /* 文字色     */
+  background    : linear-gradient(180deg, #68d3db, #e5f4fc);     /* 文字色     */
 }
 
 .error {
