--- a/contact.css
+++ b/contact.css
@@ -35,13 +35,14 @@ th span {
 }
 
 input[type="submit"] {
+  position: absolute;
   display: inline-block;
   border-radius : 5px;
   font-size     : 18pt;
   text-align    : center;
   cursor        : pointer;
   padding       : 12px 12px;
-  background    : linear-gradient(0deg, #68d3db, #e5f4fc);
+  background    : linear-gradient(0deg, #6896db, #e5f4fc);
   color         : #ffffff;
   line-height   : 1em;
   transition    : .3s;
@@ -51,7 +52,7 @@ input[type="submit"] {
 }
 input[type="button"]:hover {
   color         : #000066;     /* 背景色     */
-  background    : linear-gradient(180deg, #68d3db, #e5f4fc);     /* 文字色     */
+  background    : linear-gradient(180deg, #6896db, #e5f4fc);     /* 文字色     */
 }
 
 .error {
@@ -60,10 +61,10 @@ input[type="button"]:hover {
 
 @media screen and (max-width: 901px) {
   
-  /*.contact {
+  .contact {
     position: absolute;
     margin: 40px 20px;
-  }*/
+  }
   
   .contact-title {
     color: black;
