--- a/contact.css
+++ b/contact.css
@@ -14,11 +14,6 @@ th, td {
   width: 300px;
 }
 
-/*td {
-	padding: 20px 20px 18px 24px;
-	font-size: 100%;
-}*/
-
 th span {
 	margin-left: 5px;
 	color: #df497d;
@@ -68,9 +63,16 @@ input[type="submit"]:hover {
   }
 
   th, td {
-    padding: 30px;
-    width: 300px;
+    width: 100%;
     display: block;
+  }
+
+  th {
+    padding: 20px;
+  }
+
+  th {
+    padding: 30px;
   }
 
 }
