--- a/contact.css
+++ b/contact.css
@@ -50,11 +50,13 @@ input[type="submit"]:hover {
 }
 
 @media screen and (max-width: 901px) {
-  
+
   .contact {
-    margin: 40px 20px;
+    margin: 40px 200px;
+    color: black;
+    width: 100vh;
   }
-  
+
   .contact-title {
     color: black;
     font-size: 270%;
@@ -63,7 +65,6 @@ input[type="submit"]:hover {
   }
 
   th, td {
-    width: 100%;
     display: block;
   }
 
