--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,7 @@
 .contact {
   margin: 40px 200px;
   color: black;
+  position: relative;
 }
 
 .contact-title {
@@ -55,6 +56,7 @@ input[type="submit"]:hover {
     margin: 40px 10px;
     color: black;
     width: 100%;
+    position: relative;
   }
 
   .contact-title {
@@ -75,5 +77,9 @@ input[type="submit"]:hover {
   th {
     padding: 30px;
   }
+
+  textarea {
+    width:100%;
+    }
 
 }
