--- a/contact.css
+++ b/contact.css
@@ -31,7 +31,7 @@ th span {
 
 input[type="submit"] {
   display: inline-block;
-  border-radius: 5px;
+  border-radius: 8px;
   text-align: center;
   cursor: pointer;
   background: linear-gradient(0deg, #4e7bbe, #91abd1);
@@ -77,7 +77,7 @@ input[type="submit"]:hover {
     padding: 20px;
   }
 
-  th {
+  td {
     padding: 30px;
   }
 
